force-app/main/default/objects/Avaliacao__c/Avaliacao__c.object-meta.xml
<CustomObject>
    <label>Avaliação</label>
    <nameField>
        <displayFormat>A{000000}</displayFormat>
        <label>Nº da Avaliação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>