force-app/main/default/objects/Avaliacao__c/fields/Abdome_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Abdome_Enfermagem__c</fullName>
    <label>Abdome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normotenso</fullName>
            </value>
            <value>
                <fullName>Rígido/tenso</fullName>
            </value>
            <value>
                <fullName>Flácido</fullName>
            </value>
            <value>
                <fullName>Plano</fullName>
            </value>
            <value>
                <fullName>Escavado</fullName>
            </value>
            <value>
                <fullName>Globoso/ ascítico</fullName>
            </value>
            <value>
                <fullName>Distendido (timpânico)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>