force-app/main/default/objects/Avaliacao__c/fields/Abertura_ocular_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Abertura_ocular_Enfermagem__c</fullName>
    <label>Abertura ocular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espontânea</fullName>
            </value>
            <value>
                <fullName>À voz</fullName>
            </value>
            <value>
                <fullName>À dor</fullName>
            </value>
            <value>
                <fullName>Nenhuma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>