force-app/main/default/objects/Avaliacao__c/fields/Abertura_ocular_Pontuacao_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Abertura_ocular_Pontuacao_Enfermagem__c</fullName>
    <formula>IF(TEXT(Abertura_ocular_Enfermagem__c) = &apos;Espontânea&apos;, 4 , IF(TEXT(Abertura_ocular_Enfermagem__c) = &apos;À voz&apos;, 3, IF(TEXT(Abertura_ocular_Enfermagem__c) = &apos;À dor&apos;, 2, 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abertura ocular - Pontuação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>