force-app/main/default/objects/Avaliacao__c/fields/Abrangencia_TO__c.field-meta.xml
<CustomField>
    <fullName>Abrangencia_TO__c</fullName>
    <label>N - Abrangência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>