force-app/main/default/objects/Avaliacao__c/fields/Acesso_a_rede_deagua_enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Acesso_a_rede_deagua_enfermagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acesso a rede de água e esgoto</label>
    <type>Checkbox</type>
</CustomField>