force-app/main/default/objects/Avaliacao__c/fields/ADM_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fisioterapia__c</fullName>
    <label>ADM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>