force-app/main/default/objects/Avaliacao__c/fields/Afetividade_humor_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Afetividade_humor_Psicologia__c</fullName>
    <label>Afetividade/humor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Alterada</fullName>
            </value>
            <value>
                <fullName>Depressão</fullName>
            </value>
            <value>
                <fullName>Mania</fullName>
            </value>
            <value>
                <fullName>Labilidade Afetiva</fullName>
            </value>
            <value>
                <fullName>Ansiedade</fullName>
            </value>
            <value>
                <fullName>Angústia</fullName>
            </value>
            <value>
                <fullName>Ambivalência Afetiva</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>