force-app/main/default/objects/Avaliacao__c/fields/Alergia_Medica__c.field-meta.xml
<CustomField>
    <fullName>Alergia_Medica__c</fullName>
    <label>Alergia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>