force-app/main/default/objects/Avaliacao__c/fields/Alimentar_se_TO__c.field-meta.xml
<CustomField>
    <fullName>Alimentar_se_TO__c</fullName>
    <label>A - Alimentar-se</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>