force-app/main/default/objects/Avaliacao__c/fields/Altera_o_do_apetite_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Altera_o_do_apetite_Psicologia__c</fullName>
    <label>Alteração do apetite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>