force-app/main/default/objects/Avaliacao__c/fields/Ambiente_Arejado_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Ambiente_Arejado_Enfermagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambiente Arejado</label>
    <type>Checkbox</type>
</CustomField>