force-app/main/default/objects/Avaliacao__c/fields/Ambiente_Organizado_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Ambiente_Organizado_Enfermagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambiente Organizado</label>
    <type>Checkbox</type>
</CustomField>