force-app/main/default/objects/Avaliacao__c/fields/Anisocoricas_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Anisocoricas_Enfermagem__c</fullName>
    <label>Anisocóricas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>