force-app/main/default/objects/Avaliacao__c/fields/Antecedentes_Pessoais_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Antecedentes_Pessoais_Fisioterapia__c</fullName>
    <label>Antecedentes Pessoais</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HAS</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>Cardiopatia</fullName>
            </value>
            <value>
                <fullName>DPOC</fullName>
            </value>
            <value>
                <fullName>Neoplasia</fullName>
            </value>
            <value>
                <fullName>Etilismo</fullName>
            </value>
            <value>
                <fullName>Tabagismo</fullName>
            </value>
            <value>
                <fullName>AVC</fullName>
            </value>
            <value>
                <fullName>Antecedentes Cirúrgicos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>