force-app/main/default/objects/Avaliacao__c/fields/Ap_Cardiovascular_Medica__c.field-meta.xml
<CustomField>
    <fullName>Ap_Cardiovascular_Medica__c</fullName>
    <label>Ap. Cardiovascular</label>
    <type>TextArea</type>
</CustomField>