force-app/main/default/objects/Avaliacao__c/fields/Ap_Digestorio_Medica__c.field-meta.xml
<CustomField>
    <fullName>Ap_Digestorio_Medica__c</fullName>
    <label>Ap. Digestório</label>
    <type>TextArea</type>
</CustomField>