force-app/main/default/objects/Avaliacao__c/fields/Arrumar_se_TO__c.field-meta.xml
<CustomField>
    <fullName>Arrumar_se_TO__c</fullName>
    <label>B - Arrumar-se</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>