force-app/main/default/objects/Avaliacao__c/fields/Aspecto_da_urina_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Aspecto_da_urina_Enfermagem__c</fullName>
    <label>Aspecto da urina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clara / límpida</fullName>
            </value>
            <value>
                <fullName>Concentrada</fullName>
            </value>
            <value>
                <fullName>Hematúrica</fullName>
            </value>
            <value>
                <fullName>Colúrica</fullName>
            </value>
            <value>
                <fullName>Com sedimentos</fullName>
            </value>
            <value>
                <fullName>Modificada por medicamentos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>