force-app/main/default/objects/Avaliacao__c/fields/Ausculta_Cardiaca_Medica__c.field-meta.xml
<CustomField>
    <fullName>Ausculta_Cardiaca_Medica__c</fullName>
    <label>Ausculta Cardíaca</label>
    <type>TextArea</type>
</CustomField>