force-app/main/default/objects/Avaliacao__c/fields/Ausculta_Cervical_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Ausculta_Cervical_Fonoaudiologia__c</fullName>
    <label>Ausculta Cervical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positiva</fullName>
            </value>
            <value>
                <fullName>Negativa</fullName>
            </value>
            <value>
                <fullName>Não avaliada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>