force-app/main/default/objects/Avaliacao__c/fields/Ausculta_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Ausculta_Enfermagem__c</fullName>
    <label>Ausculta</label>
    <length>36</length>
    <type>Text</type>
</CustomField>