force-app/main/default/objects/Avaliacao__c/fields/Ausculta_Pulmonar_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Ausculta_Pulmonar_Fisioterapia__c</fullName>
    <label>Ausculta Pulmonar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MV+ diminuído</fullName>
            </value>
            <value>
                <fullName>Sem RA</fullName>
            </value>
            <value>
                <fullName>Com Roncos</fullName>
            </value>
            <value>
                <fullName>Com Sibilos</fullName>
            </value>
            <value>
                <fullName>Com Creptos</fullName>
            </value>
            <value>
                <fullName>Com Estertores</fullName>
            </value>
            <value>
                <fullName>MV+ Sem RA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>