force-app/main/default/objects/Avaliacao__c/fields/Ausculta_Pulmonar_Medica__c.field-meta.xml
<CustomField>
    <fullName>Ausculta_Pulmonar_Medica__c</fullName>
    <label>Ausculta Pulmonar</label>
    <type>TextArea</type>
</CustomField>