force-app/main/default/objects/Avaliacao__c/fields/Autoconceito_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Autoconceito_Psicologia__c</fullName>
    <label>Autoconceito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>