force-app/main/default/objects/Avaliacao__c/fields/Avalia_o_direta_de_deglu_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_direta_de_deglu_Fonoaudiologia__c</fullName>
    <label>Avaliação direta de deglutição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>