force-app/main/default/objects/Avaliacao__c/fields/AVDs_geral__c.field-meta.xml
<CustomField>
    <fullName>AVDs_geral__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <label>AVD&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>