force-app/main/default/objects/Avaliacao__c/fields/b1301_motivacao_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>b1301_motivacao_Psicologia__c</fullName>
    <label>b1301</label>
    <length>255</length>
    <type>Text</type>
</CustomField>