force-app/main/default/objects/Avaliacao__c/fields/b13402_apetite_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>b13402_apetite_Psicologia__c</fullName>
    <label>b13402</label>
    <length>255</length>
    <type>Text</type>
</CustomField>