force-app/main/default/objects/Avaliacao__c/fields/b134_sono_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>b134_sono_Psicologia__c</fullName>
    <label>b134</label>
    <length>255</length>
    <type>Text</type>
</CustomField>