force-app/main/default/objects/Avaliacao__c/fields/b156_Pensamento_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>b156_Pensamento_Psicologia__c</fullName>
    <label>b156</label>
    <length>255</length>
    <type>Text</type>
</CustomField>