force-app/main/default/objects/Avaliacao__c/fields/b160_comunicacao_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>b160_comunicacao_Psicologia__c</fullName>
    <label>b160</label>
    <length>255</length>
    <type>Text</type>
</CustomField>