force-app/main/default/objects/Avaliacao__c/fields/Banhar_se_TO__c.field-meta.xml
<CustomField>
    <fullName>Banhar_se_TO__c</fullName>
    <label>C - Banhar-se</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>