force-app/main/default/objects/Avaliacao__c/fields/Banheira_chuveiro_TO__c.field-meta.xml
<CustomField>
    <fullName>Banheira_chuveiro_TO__c</fullName>
    <label>K - Banheira / chuveiro</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>