force-app/main/default/objects/Avaliacao__c/fields/Bochecha_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Bochecha_Fonoaudiologia__c</fullName>
    <label>Bochecha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normotônus</fullName>
            </value>
            <value>
                <fullName>Hipotônus</fullName>
            </value>
            <value>
                <fullName>Hipertônus</fullName>
            </value>
            <value>
                <fullName>Suga</fullName>
            </value>
            <value>
                <fullName>Infla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>