force-app/main/default/objects/Avaliacao__c/fields/Breve_hist_rico_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Breve_hist_rico_Fonoaudiologia__c</fullName>
    <label>Breve histórico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>