force-app/main/default/objects/Avaliacao__c/fields/Cateteres_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Cateteres_Enfermagem__c</fullName>
    <label>Cateteres</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>Subclávia (D ou E)</fullName>
            </value>
            <value>
                <fullName>Jugular (D ou E)</fullName>
            </value>
            <value>
                <fullName>Flebotomia</fullName>
            </value>
            <value>
                <fullName>Duplo lúmen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>