force-app/main/default/objects/Avaliacao__c/fields/Cateteres_Local_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Cateteres_Local_Enfermagem__c</fullName>
    <label>Cateteres - Local</label>
    <length>36</length>
    <type>Text</type>
</CustomField>