force-app/main/default/objects/Avaliacao__c/fields/Cervical_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Cervical_Fisioterapia__c</fullName>
    <label>Cervical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>