force-app/main/default/objects/Avaliacao__c/fields/Cianose_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Cianose_Fisioterapia__c</fullName>
    <label>Cianose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acianótico</fullName>
            </value>
            <value>
                <fullName>Cianótico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>