force-app/main/default/objects/Avaliacao__c/fields/Comorbidades_Medica__c.field-meta.xml
<CustomField>
    <fullName>Comorbidades_Medica__c</fullName>
    <label>Comorbidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hipertensão Arterial</fullName>
            </value>
            <value>
                <fullName>Insuficiência Cardíaca</fullName>
            </value>
            <value>
                <fullName>Acidente Vascular Encefálico Isquêmico</fullName>
            </value>
            <value>
                <fullName>Acidente Vascular Encefálico Hemorrágico</fullName>
            </value>
            <value>
                <fullName>Síndrome Demencial</fullName>
            </value>
            <value>
                <fullName>DPOC</fullName>
            </value>
            <value>
                <fullName>Doença Renal Crônica Conservador</fullName>
            </value>
            <value>
                <fullName>Diabetes Mellitus</fullName>
            </value>
            <value>
                <fullName>Obesidade</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Pós COVID</fullName>
            </value>
            <value>
                <fullName>Neoplasia</fullName>
            </value>
            <value>
                <fullName>Doença Arterial Coronariana</fullName>
            </value>
            <value>
                <fullName>Fibrilação Atrial</fullName>
            </value>
            <value>
                <fullName>Epilepsia</fullName>
            </value>
            <value>
                <fullName>Lesão Medular</fullName>
            </value>
            <value>
                <fullName>Asma</fullName>
            </value>
            <value>
                <fullName>Doença Renal Crônica dialítica</fullName>
            </value>
            <value>
                <fullName>Hipotireoidismo</fullName>
            </value>
            <value>
                <fullName>Cirrose Hepática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>