force-app/main/default/objects/Avaliacao__c/fields/Compreens_o_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Compreens_o_Fonoaudiologia__c</fullName>
    <label>Compreensão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compreende ordens verbais simples</fullName>
            </value>
            <value>
                <fullName>Compreende ordens verbais complexas</fullName>
            </value>
            <value>
                <fullName>Não compreende</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>