force-app/main/default/objects/Avaliacao__c/fields/Compreenso_do_diagnstico_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Compreenso_do_diagnstico_Psicologia__c</fullName>
    <label>Compreensão do diagnóstico/prognóstico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adequada</fullName>
            </value>
            <value>
                <fullName>Limitada</fullName>
            </value>
            <value>
                <fullName>Inadequada</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>