force-app/main/default/objects/Avaliacao__c/fields/Comunica_o_2_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Comunica_o_2_Fonoaudiologia__c</fullName>
    <label>Comunicação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disartrofonia</fullName>
            </value>
            <value>
                <fullName>Disfonia</fullName>
            </value>
            <value>
                <fullName>Afasia de compreensão</fullName>
            </value>
            <value>
                <fullName>Afasia de expressão</fullName>
            </value>
            <value>
                <fullName>Afasia mista Anartria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>