force-app/main/default/objects/Avaliacao__c/fields/Comunica_o_3_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Comunica_o_3_Fonoaudiologia__c</fullName>
    <label>Comunicação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b167.0 - Não há problema (0-4%)</fullName>
            </value>
            <value>
                <fullName>b167.1 - Problema ligeiro (5-24%)</fullName>
            </value>
            <value>
                <fullName>b167.2 - Problema moderado (25-49%)</fullName>
            </value>
            <value>
                <fullName>b167.3 - Problema grave (50-95%)</fullName>
            </value>
            <value>
                <fullName>b167.4 - Problema completo (96-100%)</fullName>
            </value>
            <value>
                <fullName>b167.8 - Não especificado</fullName>
            </value>
            <value>
                <fullName>b167.9 - Não aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>