force-app/main/default/objects/Avaliacao__c/fields/Comunica_o_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Comunica_o_Psicologia__c</fullName>
    <label>Comunicação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Piscar de olhos</fullName>
            </value>
            <value>
                <fullName>Escrita</fullName>
            </value>
            <value>
                <fullName>Gestos</fullName>
            </value>
            <value>
                <fullName>Prancha</fullName>
            </value>
            <value>
                <fullName>Articulação de palavras</fullName>
            </value>
            <value>
                <fullName>Alteração da linguagem</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>