force-app/main/default/objects/Avaliacao__c/fields/Conduta_Medica__c.field-meta.xml
<CustomField>
    <fullName>Conduta_Medica__c</fullName>
    <label>Conduta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>