force-app/main/default/objects/Avaliacao__c/fields/Conflito_familiar_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Conflito_familiar_Psicologia__c</fullName>
    <label>Conflito familiar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>