force-app/main/default/objects/Avaliacao__c/fields/Consci_ncia_cl_nica_ava_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Consci_ncia_cl_nica_ava_Psicologia__c</fullName>
    <label>Consciência clínica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vígil</fullName>
            </value>
            <value>
                <fullName>Sonolência</fullName>
            </value>
            <value>
                <fullName>Torpor</fullName>
            </value>
            <value>
                <fullName>Coma vígil</fullName>
            </value>
            <value>
                <fullName>Coma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>