force-app/main/default/objects/Avaliacao__c/fields/Consequ_ncias_s_cio_familiare_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Consequ_ncias_s_cio_familiare_Psicologia__c</fullName>
    <label>Consequências sócio-familiares</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>