force-app/main/default/objects/Avaliacao__c/fields/Controle_Intestinal_TO__c.field-meta.xml
<CustomField>
    <fullName>Controle_Intestinal_TO__c</fullName>
    <label>H - Controle intestinal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>