force-app/main/default/objects/Avaliacao__c/fields/Controle_Vesical_TO__c.field-meta.xml
<CustomField>
    <fullName>Controle_Vesical_TO__c</fullName>
    <label>G - Controle Vesical</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>