force-app/main/default/objects/Avaliacao__c/fields/Creatinina_Medica__c.field-meta.xml
<CustomField>
    <fullName>Creatinina_Medica__c</fullName>
    <label>Creatinina</label>
    <length>9</length>
    <type>Text</type>
</CustomField>