force-app/main/default/objects/Avaliacao__c/fields/Curto_Prazo__c.field-meta.xml
<CustomField>
    <fullName>Curto_Prazo__c</fullName>
    <label>Curto Prazo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>