force-app/main/default/objects/Avaliacao__c/fields/Data_e_Hora_da_Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Avaliacao__c</fullName>
    <label>Data e Hora da Avaliação</label>
    <type>DateTime</type>
</CustomField>