force-app/main/default/objects/Avaliacao__c/fields/Degluti_o_2_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Degluti_o_2_Fonoaudiologia__c</fullName>
    <label>Deglutição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espontânea presente</fullName>
            </value>
            <value>
                <fullName>Espontânea atrasada</fullName>
            </value>
            <value>
                <fullName>Espontânea ausente</fullName>
            </value>
            <value>
                <fullName>Reflexa presente</fullName>
            </value>
            <value>
                <fullName>Reflexa atrasada</fullName>
            </value>
            <value>
                <fullName>Reflexa ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>