force-app/main/default/objects/Avaliacao__c/fields/Degluti_o_3_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Degluti_o_3_Fonoaudiologia__c</fullName>
    <label>Deglutição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b5105.0 - Não há problema (0-4%)</fullName>
            </value>
            <value>
                <fullName>b5105.1 - Problema ligeiro (5-24%)</fullName>
            </value>
            <value>
                <fullName>b5105.2 - Problema moderado (25-49%)</fullName>
            </value>
            <value>
                <fullName>b5105.3 - Problema grave (50-95%)</fullName>
            </value>
            <value>
                <fullName>b5105.4 - problema completo (96-100%)</fullName>
            </value>
            <value>
                <fullName>b5105.8 - Não especificado</fullName>
            </value>
            <value>
                <fullName>b5105.9 - Não aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>